fix index.html image links

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/edu/de" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_edu_bg.jpg'}});"></canvas>
+                                            <a href="/edu/de" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
                                                 </div>
@@ -121,11 +121,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/home/de" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_home_bg.jpg'}});"></canvas>
+                                            <a href="/home/de" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
                                                 </div>
@@ -134,11 +134,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/osem/de" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_OSeM_bg.png'}});"></canvas>
+                                            <a href="/osem/de" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
                                                 </div>
@@ -150,11 +150,11 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/edu/en" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_edu_bg.jpg'}});"></canvas>
+                                            <a href="/edu/en" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
                                                 </div>
@@ -163,11 +163,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/home/en" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_home_bg.jpg'}});"></canvas>
+                                            <a href="/home/en" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
                                                 </div>
@@ -176,11 +176,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="//sensebox.de/books/senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="/senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="//sensebox.de/books/osem/en" style="text-decoration: none;" target="_blank">
-                                                <canvas class="price-header-bg" style="background-image: url({{ site.baseurl | append: '/images/instructions_OSeM_bg.png'}});"></canvas>
+                                            <a href="/osem/en" style="text-decoration: none;" target="_blank">
+                                                <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
                                                 </div>
