--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/edu/de" style="text-decoration: none;" target="_blank">
+                                            <a href="edu/de" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
@@ -121,10 +121,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/home/de" style="text-decoration: none;" target="_blank">
+                                            <a href="home/de" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
@@ -134,10 +134,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/osem/de" style="text-decoration: none;" target="_blank">
+                                            <a href="osem/de" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
@@ -150,10 +150,10 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/edu/en" style="text-decoration: none;" target="_blank">
+                                            <a href="edu/en" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
@@ -163,10 +163,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/home/en" style="text-decoration: none;" target="_blank">
+                                            <a href="home/en" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
@@ -176,10 +176,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="/senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="/osem/en" style="text-decoration: none;" target="_blank">
+                                            <a href="osem/en" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
