--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="edu/de" style="text-decoration: none;" target="_blank">
@@ -121,7 +121,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="home/de" style="text-decoration: none;" target="_blank">
@@ -134,7 +134,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="osem/de" style="text-decoration: none;" target="_blank">
@@ -150,7 +150,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="edu/en" style="text-decoration: none;" target="_blank">
@@ -163,7 +163,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="home/en" style="text-decoration: none;" target="_blank">
@@ -176,7 +176,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="./senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
                                             <a href="osem/en" style="text-decoration: none;" target="_blank">
