update landingpage urls to gitbook.com

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="https://www.sensebox.de/">
-                            <img src="https://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; height=55px; max-width:180px; ">
+                            <img src="https://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; height:55px; max-width:180px; ">
                         </a>
                     </div>
                 </div>
@@ -108,10 +108,10 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:edu_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/edu?lang=de" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="edu/de" style="text-decoration: none;" target="_blank">
+                                            <a href="https://edu.books.sensebox.de/de/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
@@ -121,10 +121,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:home_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/home?lang=de" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="home/de" style="text-decoration: none;" target="_blank">
+                                            <a href="https://home.books.sensebox.de/de/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
@@ -134,10 +134,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:osem_de.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/osem?lang=de" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="osem/de" style="text-decoration: none;" target="_blank">
+                                            <a href="https://osem.books.sensebox.de/de/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
@@ -150,10 +150,10 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:edu_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/edu?lang=en" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="edu/en" style="text-decoration: none;" target="_blank">
+                                            <a href="https://edu.books.sensebox.de/en/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_edu_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:edu</h3>
@@ -163,10 +163,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:home_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/home?lang=en" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="home/en" style="text-decoration: none;" target="_blank">
+                                            <a href="https://home.books.sensebox.de/en/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_home_bg.jpg);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>senseBox:home</h3>
@@ -176,10 +176,10 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="card">
-                                            <a href="./senseBox:osem_en.pdf" class="overlay opacity-animation-fast" target="_blank">
+                                            <a href="https://www.gitbook.com/download/pdf/book/sensebox/osem?lang=en" class="overlay opacity-animation-fast" target="_blank">
                                                 <em style="font-size: 1.4em;">PDF</em>
                                             </a>
-                                            <a href="osem/en" style="text-decoration: none;" target="_blank">
+                                            <a href="https://osem.books.sensebox.de/en/" style="text-decoration: none;" target="_blank">
                                                 <canvas class="price-header-bg" style="background-image: url(https://sensebox.de/images/instructions_OSeM_bg.png);"></canvas>
                                                 <div class="price-text" style="padding:20px;">
                                                     <h3>openSenseMap</h3>
