add hint about comments in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="https://www.sensebox.de/">
-                            <img src="https://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; height:55px; max-width:180px; ">
+                            <img src="https://www.sensebox.de/images/logo_transparent.png" alt="senseBox Logo" style="width:auto; max-width:180px; ">
                         </a>
                     </div>
                 </div>
@@ -189,6 +189,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <p><b>If you find errors or improvements in the documentation, please leave a comment by clicking the <code style="box-sizing: border-box">+</code>-button on the right-hand side of the respective paragraph!</b></p>
                         </div>
                     </div>
                 </div>
